--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,21 @@
 node_modules
 /dist
 
-# VSCode Settings
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
 .vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
